syntax="proto3";
package protos;

import "common.proto";
import "protoHero.proto";

//部队
message Troop {
	int64 sid = 1;			//主键
	int64 uid = 2;			//所属玩家
	int32 tp = 3;			//行动(1采,2侦,3驻,4集,5打怪,6打人,7联攻怪(BOSS),8联攻人,
									//  9联防人,10打扎营,11打资源,12运输,13王城,14增援王城
									//  15探索,16打探索点)
	int32 stat = 4;		//行动状态(1等待2出发3停留4返回)
	//tile数据根坐标
	int32 sx = 5;			//起点根坐标
	int32 sy = 6;			//起点根坐标
	int32 tx = 7;			//目标根坐标
	int32 ty = 8;			//目标根坐标
	int64 allianceId = 9;	//部队玩家联盟sid

	int64 lsid = 11;		//所属联军部队sid
	int64 st = 12;			//出发时间(中途加速修正)
	int64 et = 13;			//到达时间(0等待/停留 中途加速修正)
	int64 sumTime = 14;	//初始总时间
	repeated protos.Hero hero = 15;		//英雄(主将,副将,副将)
	repeated protos.Unit unit = 16;		//兵种数量
	repeated protos.Res res = 17;			//携带资源
	
	//出发时目标,到达时检查
	int32 ttp = 18;		//目标类型 Tile.tp
	int32 ttp2 = 19;		//目标子类型 按各类型定义
	int32 tlevel = 20;		//目标级别 按各类型定义
	int64 tuid = 21;		//目标所属玩家(缺省0无)
	int64 taid = 22;		//目标所属联盟(缺省0无)
	//tile扩占用中心坐标
	float sxc = 23;		//起点中心坐标
	float syc = 24;		//起点中心坐标
	float txc = 25;		//目标中心坐标
	float tyc = 26;		//目标中心坐标
}
message TroopPK {
	int64 sid = 1;			//主键
}


//集结联军概要
message Rally {
	int64 sid = 1;			//主键 同主部队sid
	int64 uid = 2;			//发起者uid
	int64 startTime = 3;	//发起时间
	int64 joinTime = 4;	//加入截止时间
	int64 goTime = 5;		//预计出发时间(按最晚到达子队变化)
	
	int32 troopMax = 6;	//部队数上限
	int32 troopNum = 7;	//当前部队数
	int32 unitMax = 8;		//兵单位上限
	int32 unitNum = 9;		//当前兵单位数
	int64 allianceId = 10;	//联盟ID
}
message RallyPK {
	int64 sid = 1;			//主键
}


//己探索时间记录
message Explored {
	int64 sid = 1;				//探索点实例ID 对应Tile.explore
	int64 nextTime = 2;		//下次可再次探索时间(用于倒计时)
	int64 lastTime = 3;		//上次探索时间(如果UI上不需要进度条不要这条)
}
message ExploredPK {
	int64 sid = 1;				//探索点实例ID 对应Tile.explore
}

//探索事件
message ExploreEvent {
	int64 sid = 1;			//事件sid
	int64 cid = 2;			//随到事件配置id(exploreEventConfig.id)
	int32 stat = 3;		//事件状态(0初始,其它选择分支菜单序号)
	int64 tarSid = 4;		//探索源 对应Tile.explore
	int32 tarX = 5;		//探索源 对应Tile.x
	int32 tarY = 6;		//探索源 对应Tile.x
	
	int64 timeTo = 8;		//延时类 到期时间
	
	int32 bossX = 9;		//集结BOSS类坐标
	int32 bossY = 10;		//集结BOSS类坐标
}
message ExploreEventPK {
	int64 sid = 1;			//实例sid
}

//以上数据结构-------------------------------------------------//
//-------------------------------------------------------------//
//以下协议-----------------------------------------------------//

//201 获取地图
message Map_C {
	int32 protoId = 1;//[default = 201];		//生成mapping
	int32 server = 2; 		//服ID
}

//203 视野定位
message View_C {
	int32 protoId = 1;//[default = 203];		//生成mapping
	int32 server = 2; 		//服ID
	int32 x = 3; 			//X
	int32 y = 4; 			//Y
}
//204 视野定位
message View_S {
	int32 protoId = 1;//[default = 204];		//生成mapping
	int32 server = 2; 		//服ID
	int32 x = 3; 			//X
	int32 y = 4; 			//Y
	repeated protos.Tile tile = 5;	//格子
}


//205 收藏标记
message Mark_C {
	int32 protoId = 1;//[default = 205];		//生成mapping
	int32 server = 2; 		//服ID?
	int32 x = 3; 			//X
	int32 y = 4; 			//Y
	int32 tp = 5; 			//标记,朋友,敌人
}

//207 城市迁移
message CityMove_C {
	int32 protoId = 1;//[default = 207];		//生成mapping
	int32 server = 2; 		//服ID
	int32 x = 3; 			//X
	int32 y = 4; 			//Y
}

//209资源/怪点搜索
message TileFind_C {
	int32 protoId = 1;//[default = 209];		//生成mapping
	int32 tp = 2;  	//1资源 2怪
	int32 lv = 3; 		//级别
	int32 tp2 = 4;  	//资源子类型 1粮2木3石4金5银
}

//210资源/怪点搜索
message TileFind_S {
	int32 protoId = 1;//[default = 210];		//生成mapping
	repeated protos.Tile tile = 2;			//格子
}

//211 部队行动
message March_C {
	int32 protoId = 1;//[default = 211];		//生成mapping
	int32 tp = 2;			//行动(1采,2侦,3驻,4集,5打怪,6打人,7联攻怪,8联攻人,9联防人)
	int32 x = 3; 			//X
	int32 y = 4; 			//Y
	repeated int64 hero = 5;		//英雄sid(主将,副将,副将)
	repeated protos.Unit unit = 6;	//兵种数量(cid,num)
	int32 wait = 7; 		//集结等待时间(min)
	int64 lsid = 8; 		//集结跟随发起者部队sid
	repeated protos.Res res = 9;			//携带资源
}

//213 部队撒回
message Recall_C {
	int32 protoId = 1;//[default = 213];		//生成mapping
	int64 sid = 2;			//非0:指定在途或驻扎部队sid
}

//215 在外军指令
message MarchCmd_C {
	int32 protoId = 1;//[default = 215];		//生成mapping
	int64 sid = 2;			//非0:指定驻扎部队sid
	int32 tp = 3;			//行动(5打怪,6打人,7联攻怪,8联攻人,9联防人)
	int32 x = 4; 			//目标X
	int32 y = 5; 			//目标Y
}

//217 部队加速
message SpeedUp_C {
	int32 protoId = 1;//[default = 217];		//生成mapping
	int64 sid = 2;			//非0:指定在途部队sid
	int32 cid = 3;			//加速道具cid
}


//219 城市随机迁移
message CityMoveRandom_C {
	int32 protoId = 1;//[default = 219];		//生成mapping
}


//221 集结踢人
message KickRally_C {
	int32 protoId = 1;//[default = 221];		//生成mapping
	int64 lsid = 2;		//我发起的集结sid
	int64 sid = 3;			//踢出的跟随部队sid(只能踢集结前往中/集结等待中)
}

//223 支援遣返
message Repatriate_C {
	int32 protoId = 1;//[default = 223];		//生成mapping
	int64 sid = 3;			//支援我的部队sid
}

//225 支援日志
message ReinforceLog_C {
	int32 protoId = 1;//[default = 225];		//生成mapping
	int64 from = 2;			//最新sid,只回大于此者
}

//226 支援日志
message ReinforceLog_S {
	int32 protoId = 1;//[default = 226];		//生成mapping
}

//227 支援容量查询
message ReinforceCap_C {
	int32 protoId = 1;//[default = 227];		//生成mapping
	int32 x = 2;			//目标坐标
	int32 y = 3;			//目标坐标
}

//228 支援容量
message ReinforceCap_S {
	int32 protoId = 1;//[default = 228];		//生成mapping
	int64 rest = 2;				//剩余容量
	int64 max = 3;					//最大容量
}

//229 探索事件选项选择
message ExploredSelect_C {
	int32 protoId = 1;//[default = 229];		//生成mapping
	int64 sid= 2;				//探索事件sid(ExploreEvent.sid)
	int32 index= 3;			//选项索引号(菜单选项123...,-1为放弃)
}

